--- a/core/templates/admin_portal/products.html
+++ b/core/templates/admin_portal/products.html
@@ -59,6 +59,7 @@
       </form>
     </div>
 
+    <div class="table-responsive admin-table-wrap">
     <table class="table">
       <thead>
         <tr>
@@ -118,7 +119,7 @@
         {% endfor %}
       </tbody>
     </table>
+    </div>
   </div>
  </body>
 </html>
-
