--- a/core/templates/dashboard/admin/overview.html
+++ b/core/templates/dashboard/admin/overview.html
@@ -52,7 +52,7 @@
             </div>
             <div class="card-body">
                 {% if recent_orders %}
-                <div class="table-responsive">
+                <div class="table-responsive admin-table-wrap">
                     <table class="table table-sm">
                         <thead>
                             <tr>
@@ -103,7 +103,7 @@
             </div>
             <div class="card-body">
                 {% if pending_stores %}
-                <div class="table-responsive">
+                <div class="table-responsive admin-table-wrap">
                     <table class="table table-sm">
                         <thead>
                             <tr>
