--- a/core/templates/dashboard/store/orders.html
+++ b/core/templates/dashboard/store/orders.html
@@ -13,7 +13,7 @@
 <div class="row">
     <div class="col-12">
         {% if orders %}
-        <div class="table-responsive">
+        <div class="table-responsive admin-table-wrap">
             <table class="table">
                 <thead>
                     <tr>
@@ -87,7 +87,7 @@
                                     </div>
                                     
                                     <h6>منتجات الطلب:</h6>
-                                    <div class="table-responsive">
+                                    <div class="table-responsive admin-table-wrap">
                                         <table class="table table-sm">
                                             <thead>
                                                 <tr>
