--- a/core/templates/dashboard/super_owner/inventory.html
+++ b/core/templates/dashboard/super_owner/inventory.html
@@ -69,7 +69,7 @@
                                 <button type="button" class="btn btn-danger btn-sm" id="bulk_delete_all_variants">حذف الكل</button>
                             </div>
                         </div>
-                        <div class="table-responsive">
+                        <div class="table-responsive admin-table-wrap">
                             <table class="table table-striped table-bordered align-middle">
                                 <thead class="table-light">
                                     <tr>
