--- a/core/templates/dashboard/super_owner/products.html
+++ b/core/templates/dashboard/super_owner/products.html
@@ -89,7 +89,7 @@
                             <button type="button" class="btn btn-danger btn-sm" id="bulk_delete_all_products">حذف الكل</button>
                         </div>
                     </div>
-                    <div class="table-responsive">
+                    <div class="table-responsive admin-table-wrap">
                         <table class="table table-hover align-middle">
                             <thead class="table-light">
                                 <tr>
