--- a/core/templates/admin_portal/customers.html
+++ b/core/templates/admin_portal/customers.html
@@ -24,6 +24,7 @@
       {% endfor %}
     {% endif %}
 
+    <div class="table-responsive admin-table-wrap">
     <table class="table">
       <thead>
         <tr>
@@ -65,7 +66,7 @@
         {% endfor %}
       </tbody>
     </table>
+    </div>
   </div>
  </body>
 </html>
-
