--- a/core/templates/admin_portal/orders.html
+++ b/core/templates/admin_portal/orders.html
@@ -24,6 +24,7 @@
       {% endfor %}
     {% endif %}
 
+    <div class="table-responsive admin-table-wrap">
     <table class="table">
       <thead>
         <tr>
@@ -68,7 +69,7 @@
         {% endfor %}
       </tbody>
     </table>
+    </div>
   </div>
  </body>
 </html>
-
