--- a/core/templates/dashboard/admin/stores.html
+++ b/core/templates/dashboard/admin/stores.html
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-12">
         {% if stores %}
-        <div class="table-responsive">
+        <div class="table-responsive admin-table-wrap">
             <table class="table">
                 <thead>
                     <tr>
