--- a/core/templates/dashboard/main_dashboard.html
+++ b/core/templates/dashboard/main_dashboard.html
@@ -133,7 +133,7 @@
                     </div>
                     <div class="card-body p-0">
                         {% if recent_orders %}
-                            <div class="table-responsive">
+                            <div class="table-responsive admin-table-wrap">
                                 <table class="table table-hover mb-0">
                                     <thead class="table-light">
                                         <tr>
