--- a/core/templates/dashboard/store/products.html
+++ b/core/templates/dashboard/store/products.html
@@ -19,7 +19,7 @@
 <div class="row">
     <div class="col-12">
         {% if products %}
-        <div class="table-responsive">
+        <div class="table-responsive admin-table-wrap">
             <table class="table">
                 <thead>
                     <tr>
