--- a/core/templates/dashboard/super_owner/orders.html
+++ b/core/templates/dashboard/super_owner/orders.html
@@ -60,7 +60,7 @@
                         </div>
                     </div>
 
-                    <div class="table-responsive">
+                    <div class="table-responsive admin-table-wrap">
                         <table class="table table-hover align-middle">
                             <thead class="table-light">
                                 <tr>
