--- a/core/templates/dashboard/super_owner/owners.html
+++ b/core/templates/dashboard/super_owner/owners.html
@@ -42,7 +42,7 @@
           <button type="button" class="btn btn-success btn-sm" id="open_create_owner_modal">إضافة مالك جديد</button>
         </div>
       </div>
-      <div class="table-responsive">
+      <div class="table-responsive admin-table-wrap">
         <table class="table table-hover align-middle">
           <thead class="table-light">
             <tr>
