--- a/core/templates/dashboard/super_owner/stores.html
+++ b/core/templates/dashboard/super_owner/stores.html
@@ -38,7 +38,7 @@
                         </a>
                     </div>
 
-                    <div class="table-responsive">
+                    <div class="table-responsive admin-table-wrap">
                         <table class="table table-hover align-middle">
                             <thead class="table-light">
                                 <tr>
