--- a/core/templates/dashboard/super_owner/stores_operational.html
+++ b/core/templates/dashboard/super_owner/stores_operational.html
@@ -99,7 +99,7 @@
       
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive admin-table-wrap">
       <table class="table table-hover align-middle">
         <thead class="table-light">
           <tr>
