--- a/core/templates/dashboard/super_owner/technical_debugger.html
+++ b/core/templates/dashboard/super_owner/technical_debugger.html
@@ -13,7 +13,7 @@
   </div>
   <div class="card border-0 shadow-sm">
     <div class="card-body">
-      <div class="table-responsive">
+      <div class="table-responsive admin-table-wrap">
         <table class="table table-sm align-middle">
           <thead>
             <tr>
